# ExoIris

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
doc/: requirements.txt
doc/source/: conf.py  index.rst  install.rst
doc/source/_static/: custom.css
doc/source/_static/css/: custom.css
doc/source/api/: binning.rst  easyts.rst  exoiris.rst  index.rst  tsdata.rst
doc/source/api/api/: easyts.EasyTS.add_radius_ratio_knots.rst  easyts.EasyTS.fit.rst  easyts.EasyTS.fit_white.rst  easyts.EasyTS.gp.rst  easyts.EasyTS.normalize_baseline.rst  easyts.EasyTS.optimize_gp_hyperparameters.rst  easyts.EasyTS.plot_baseline.rst  easyts.EasyTS.plot_residuals.rst  easyts.EasyTS.plot_setup.rst  easyts.EasyTS.plot_white.rst  easyts.EasyTS.rst  easyts.EasyTS.sample.rst  easyts.EasyTS.save.rst  easyts.EasyTS.set_gp_hyperparameters.rst  easyts.EasyTS.set_gp_kernel.rst  easyts.EasyTS.set_ldtk_prior.rst  easyts.EasyTS.set_noise_model.rst  easyts.EasyTS.set_radius_ratio_knots.rst  easyts.EasyTS.set_radius_ratio_prior.rst  easyts.TSData.bin_wavelength.rst  easyts.TSData.crop_wavelength.rst  easyts.TSData.plot.rst  easyts.TSData.remove_outliers.rst  easyts.TSData.rst  easyts.binning.Binning.rst  easyts.binning.CompoundBinning.rst  easyts.load_model.rst
doc/source/examples/: figures.ipynb  friendly_introduction.ipynb  index.rst  setup_multiprocessing.py
doc/source/examples/e01/: 01a_not_so_short_intro.ipynb  01b_short_intro.ipynb  02_increasing_knot_resolution.ipynb  03_increasing_data_resolution.ipynb  04_gaussian_processes.ipynb  05a_ldtkldm.ipynb  06_spot_crossing.ipynb  07_transit_light_source_effect.ipynb  A2_full_data_resolution.ipynb  appendix_1_data_preparation.ipynb  plot_1.ipynb
doc/source/examples/e01/data/: README.txt  hat-p-18b-2022-06-niriss-o1.fits  hat-p-18b-2022-06-niriss-o2.fits
doc/source/examples/e1_wasp39_feinstein2023/: 01a_low_resolution_power2.ipynb  01b_short_intro.ipynb  appendix_1_data_preparation.ipynb
doc/source/features/: baseline_modeling.rst  flexible_resolution.rst  joint_modeling.rst  loglikelihood.rst  offsets.rst  savefiles.rst  spot_modeling.rst  ttvs.rst
doc/source/features_old/: baseline_modeling.rst  flexible_resolution.rst  index.rst  loglikelihood.rst  offsets.rst  savefiles.rst  spot_modeling.rst  ttvs.rst
easyts/: __init__.py  binning.py  easyts.py  ldtkld.py  tsdata.py  tslpf.py  util.py  wlpf.py
exoiris/: __init__.py  bbdata.py  bin1d.py  bin2d.py  binning.py  ephemeris.py  exoiris.py  ldtkld.py  lmlikelihood.py  loglikelihood.py  prtretrieval.py  spotmodel.py  tsdata.py  tslpf.py  tsmodel.py  util.py  wlpf.py
tests/: test_binning.py  test_import.py
