[project]
name = "EasyTS"
version = "0.5"
description = 'Easy and robust exoplanet transmission spectroscopy.'
authors=[{name='Hannu Parviainen', email='hannu@iac.es'}]
classifiers=[
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
keywords = ['astronomy',  'astrophysics',  'exoplanets']
dependencies = ["pytransit", "ldtk", "numpy", "scipy", "numba", "matplotlib"]
requires-python = ">= 3.8"
readme = "README.md"
license = {text = "GPLv2"}

[project.urls]
homepage = 'https://github.com/hpparvi/EasyTS'

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["easyts"]
namespaces = true
