[project]
name = "ExoIris"
description = 'Easy and robust exoplanet transmission spectroscopy.'
authors=[{name='Hannu Parviainen', email='hannu@iac.es'}]
classifiers=[
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
]
keywords = ['astronomy',  'astrophysics',  'exoplanets']
requires-python = ">= 3.10"
readme = "README.md"
license = {text = "GPLv3"}
dynamic = ["version", "dependencies"]

[project.urls]
homepage = 'https://github.com/hpparvi/ExoIris'

[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["exoiris"]
namespaces = true

[tool.setuptools_scm]
